feat: Update Polars exploration notebook.

--- a/test_polar (1).ipynb
+++ b/test_polar (1).ipynb
@@ -59,7 +59,7 @@
    "id": "2b27001f",
    "metadata": {},
    "source": [
-    "## 🔴 PHẦN 1: EAGER EXECUTION (CÁCH TIẾP CẬN \"NGÂY THƠ\")\n",
+    "##  PHẦN 1: EAGER EXECUTION (CÁCH TIẾP CẬN \"NGÂY THƠ\")\n",
     "\n",
     "Trong cách tiếp cận truyền thống này (tương tự Pandas), chúng ta sử dụng `pl.read_csv`.\n",
     "\n",
@@ -70,7 +70,7 @@
     "    * Nếu ta viết lệnh `sort` (sắp xếp) trước lệnh `filter` (lọc), máy sẽ \"ngây thơ\" sắp xếp cả triệu dòng dữ liệu, gây tốn CPU và RAM vô ích.\n",
     "    * Dễ gặp lỗi `MemoryError` nếu dữ liệu lớn hơn RAM.\n",
     "\n",
-    "👉 **Hãy xem code bên dưới chạy chậm như thế nào khi ta cố tình viết thứ tự xử lý chưa tối ưu.**"
+    " **Hãy xem code bên dưới chạy chậm như thế nào khi ta cố tình viết thứ tự xử lý chưa tối ưu.**"
    ]
   },
   {
@@ -135,7 +135,7 @@
    "id": "465bd1e4",
    "metadata": {},
    "source": [
-    "## 🟢 PHẦN 2: LAZY EXECUTION\n",
+    "##  PHẦN 2: LAZY EXECUTION\n",
     "\n",
     "Ở đây, chúng ta chuyển sang dùng `pl.scan_csv`. Polars sẽ không chạy ngay mà sẽ lập một Query Plan.\n",
     "\n",
@@ -152,7 +152,7 @@
     "\n",
     "3.  **Projection Pushdown:** Chỉ đọc những cột cần thiết, bỏ qua các cột dư thừa trong file.\n",
     "\n",
-    "👉 **Kết quả:** Hãy xem **Query Plan** (`.explain()`) bên dưới. Dù ta viết rất nhiều lệnh `sort`, nhưng trong bảng kế hoạch chỉ còn lại đúng một lệnh duy nhất!"
+    " **Kết quả:** Hãy xem **Query Plan** (`.explain()`) bên dưới. Dù ta viết rất nhiều lệnh `sort`, nhưng trong bảng kế hoạch chỉ còn lại đúng một lệnh duy nhất!"
    ]
   },
   {
@@ -231,7 +231,7 @@
    "id": "8bb3b1fb",
    "metadata": {},
    "source": [
-    "# 🏆 TỔNG KẾT & BÀI HỌC\n",
+    "#  TỔNG KẾT & BÀI HỌC\n",
     "\n",
     "Qua bài demo so sánh hiệu năng trên tập dữ liệu lớn, chúng ta rút ra 3 điểm cốt lõi về sức mạnh của Polars:\n",
     "\n",
